--- a/.env.development
+++ b/.env.development
@@ -17,8 +17,8 @@ NEXTAUTH_URL=http://${HOST}:${PORT}${BASEPATH}/api/auth
 NEXTAUTH_SECRET=
 
 # Google OAuth 2.0 (https://console.cloud.google.com/apis/credentials)
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
+GOOGLE_CLIENT_ID=886190787886-9bed0e65kact2jkqf9r3e0gn4f1el025.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 
 # -----------------------------------------------------------------------------
 # Database
