--- a/package.json
+++ b/package.json
@@ -4,20 +4,18 @@
   "license": "Commercial",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cross-env PROTO=http:// HOST=0.0.0.0 PORT=8001 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "cross-env PROTO=http:// HOST=0.0.0.0 PORT=8001 next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "build:icons": "tsx src/assets/iconify-icons/bundle-icons-css.js",
-    "migrate": "dotenv -e .env -- npx prisma migrate dev",
-    "postinstall": "prisma generate && npm run build:icons",
+    "postinstall": "npm run build:icons",
     "removeI18n": "tsx src/remove-translation-scripts/index.js"
   },
-  "//": " -H 0.0.0.0 -p 8001  -H 0.0.0.0 -p 8000",
+  "//": "new  old -H 0.0.0.0 -p 8001  -H 0.0.0.0 -p 8000 ",
   "dependencies": {
-    "@auth/prisma-adapter": "2.2.0",
     "@emoji-mart/data": "1.2.1",
     "@emoji-mart/react": "1.1.1",
     "@emotion/cache": "11.11.0",
@@ -37,7 +35,6 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.19",
     "@mui/material-nextjs": "5.15.11",
-    "@prisma/client": "5.15.0",
     "@reduxjs/toolkit": "2.2.5",
     "@tanstack/match-sorter-utils": "8.15.1",
     "@tanstack/react-table": "8.17.3",
@@ -84,7 +81,7 @@
     "@iconify/utils": "2.1.24",
     "autoprefixer": "10.4.19",
     "consola": "3.2.3",
-    "dotenv-cli": "7.4.2",
+    "cross-env": "^7.0.3",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
@@ -93,7 +90,6 @@
     "postcss": "8.4.38",
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.3.2",
-    "prisma": "5.15.0",
     "stylelint": "16.6.1",
     "stylelint-use-logical-spec": "5.0.1",
     "stylis": "4.3.2",
@@ -110,8 +106,5 @@
   "overrides": {
     "react": "18.3.1",
     "rimraf": "5.0.7"
-  },
-  "prisma": {
-    "schema": "./src/prisma/schema.prisma"
   }
 }
