--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # App
 # -----------------------------------------------------------------------------
 PROTO=http://
-DEBUG="*"
+#DEBUG="*"
 HOST=0.0.0.0
 PORT=8001
 BASEPATH=
