--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
 # -----------------------------------------------------------------------------
 # App
+#package json cross env line for dev //cross-env  PROTO=http:// HOST=0.0.0.0 PORT=8001 hroom-team-admin-444c.twc1.net
+#package json cross env line for start //cross-env PROTO=http:// HOST=0.0.0.0 PORT=8001
 # -----------------------------------------------------------------------------
 PROTO=http://
 DEBUG="*"
