--- a/.env.production
+++ b/.env.production
@@ -3,7 +3,7 @@
 # -----------------------------------------------------------------------------
 PROTO=http://
 #DEBUG="*"
-HOST=hroom-team-admin-ac96.twc1.net
+HOST=0.0.0.0
 PORT=8001
 BASEPATH=
 NEXT_PUBLIC_APP_URL=${PROTO}${HOST}:${PORT}${BASEPATH}
