clean no crossdev
porrt and host real for dev and prod removed from packages changed in env seted up entrypoint in dockerfile

--- a/.env.development
+++ b/.env.development
@@ -5,7 +5,7 @@
 # -----------------------------------------------------------------------------
 PROTO=http://
 DEBUG="*"
-HOST=0.0.0.0
+HOST=hroom-team-admin-444c.twc1.net
 PORT=8001
 BASEPATH=
 NEXT_PUBLIC_APP_URL=${PROTO}${HOST}:${PORT}${BASEPATH}
