--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "//": "new  old    ",
   "dependencies": {
-    "pg": "8.12.0",
     "@emoji-mart/data": "1.2.1",
     "@emoji-mart/react": "1.1.1",
     "@emotion/cache": "11.11.0",
@@ -53,12 +52,14 @@
     "classnames": "2.5.1",
     "cmdk": "1.0.0",
     "date-fns": "3.6.0",
+    "date-format": "^4.0.14",
     "emoji-mart": "5.6.0",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.4.0",
     "negotiator": "0.6.3",
     "next": "14.2.3",
     "next-auth": "4.24.7",
+    "pg": "8.12.0",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
@@ -77,7 +78,6 @@
     "valibot": "0.31.1"
   },
   "devDependencies": {
-    "pg": "8.12.0",
     "@iconify/json": "2.2.218",
     "@iconify/tools": "4.0.4",
     "@iconify/utils": "2.1.24",
@@ -89,6 +89,7 @@
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
     "globby": "14.0.1",
+    "pg": "8.12.0",
     "postcss": "8.4.38",
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.3.2",
