--- a/.env.production
+++ b/.env.production
@@ -6,6 +6,7 @@ PROTO=http://
 HOST=hroom-team-admin-444c.twc1.net
 PORT=3000
 BASEPATH=
+TZ='Europe/Moscow'
 NEXT_PUBLIC_APP_URL=${PROTO}${HOST}:${PORT}${BASEPATH}
 NEXT_PUBLIC_DOCS_URL=${PROTO}demos.themeselection.com/materio-mui-nextjs-admin-template/documentation
 NEXT_PUBLIC_PRO_URL=${PROTO}demos.themeselection.com/materio-mui-nextjs-admin-template/demo-1
