--- a/.env.development
+++ b/.env.development
@@ -7,6 +7,7 @@ PROTO=http://
 DEBUG="*"
 HOST=localhost
 PORT=3000
+TZ='Europe/Moscow'
 BASEPATH=
 NEXT_PUBLIC_APP_URL=${PROTO}${HOST}:${PORT}${BASEPATH}
 NEXT_PUBLIC_DOCS_URL=${PROTO}demos.themeselection.com/materio-mui-nextjs-admin-template/documentation
