--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "cmdk": "1.0.0",
     "date-fns": "3.6.0",
     "date-format": "^4.0.14",
+    "dayjs": "^1.11.12",
     "emoji-mart": "5.6.0",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.4.0",
