--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "negotiator": "0.6.3",
     "next": "14.2.3",
     "next-auth": "4.24.7",
+    "openai": "^4.54.0",
     "pg": "8.12.0",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
