--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "date-format": "^4.0.14",
     "dayjs": "^1.11.12",
     "emoji-mart": "5.6.0",
+    "https-proxy-agent": "^7.0.5",
     "keen-slider": "6.8.6",
     "mapbox-gl": "3.4.0",
     "negotiator": "0.6.3",
