--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
     "build:icons": "tsx src/assets/iconify-icons/bundle-icons-css.js",
     "postinstall": "npm run build:icons",
-    "removeI18n": "tsx src/remove-translation-scripts/index.js"
+    "removeI18n": "tsx src/remove-translation-scripts/index.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "//": "new  old    ",
   "dependencies": {
@@ -22,6 +24,7 @@
     "@emotion/react": "11.11.4",
     "@emotion/styled": "11.11.5",
     "@floating-ui/react": "0.26.16",
+    "@fontsource/material-icons": "^5.0.18",
     "@formatjs/intl-localematcher": "0.5.4",
     "@formkit/drag-and-drop": "0.1.0",
     "@fullcalendar/common": "5.11.5",
@@ -81,21 +84,37 @@
     "valibot": "0.31.1"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "1.6.1",
+    "@etchteam/storybook-addon-css-variables-theme": "^3.0.0",
     "@iconify/json": "2.2.218",
     "@iconify/tools": "4.0.4",
     "@iconify/utils": "2.1.24",
+    "@storybook/addon-essentials": "^8.2.7",
+    "@storybook/addon-interactions": "^8.2.7",
+    "@storybook/addon-links": "^8.2.7",
+    "@storybook/addon-onboarding": "^8.2.7",
+    "@storybook/addon-themes": "^8.2.7",
+    "@storybook/blocks": "^8.2.7",
+    "@storybook/nextjs": "^8.2.7",
+    "@storybook/react": "^8.2.8",
+    "@storybook/test": "^8.2.7",
     "autoprefixer": "10.4.19",
     "consola": "3.2.3",
     "cross-env": "^7.0.3",
+    "css-loader": "^7.1.2",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "2.29.1",
+    "eslint-plugin-storybook": "^0.8.0",
     "globby": "14.0.1",
     "pg": "8.12.0",
     "postcss": "8.4.38",
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.3.2",
+    "storybook": "^8.2.7",
+    "storybook-theme-css-vars": "^0.0.12",
+    "style-loader": "^4.0.0",
     "stylelint": "16.6.1",
     "stylelint-use-logical-spec": "5.0.1",
     "stylis": "4.3.2",
