--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "next-auth": "4.24.7",
     "openai": "^4.54.0",
     "pg": "8.12.0",
+    "pg-format": "^1.0.4",
     "react": "18.3.1",
     "react-apexcharts": "1.4.1",
     "react-colorful": "5.6.1",
