--- a/package.json
+++ b/package.json
@@ -134,6 +134,8 @@
   },
   "overrides": {
     "react": "18.3.1",
-    "rimraf": "5.0.7"
+    "rimraf": "5.0.7",
+    "react-dom": "18.3.1",
+    "@storybook/components": "6.5.16"
   }
 }
