--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@mui/lab": "5.0.0-alpha.170",
     "@mui/material": "5.15.19",
     "@mui/material-nextjs": "5.15.11",
+    "@mui/x-date-pickers": "^7.12.0",
     "@reduxjs/toolkit": "2.2.5",
     "@tanstack/match-sorter-utils": "8.15.1",
     "@tanstack/react-table": "8.17.3",
