--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "@chromatic-com/storybook": "1.6.1",
     "@etchteam/storybook-addon-css-variables-theme": "^3.0.0",
     "@iconify/json": "2.2.218",
-    "@iconify/tools": "4.0.4",
+    "@iconify/tools": "^3.0.7",
     "@iconify/utils": "2.1.24",
     "@storybook/addon-essentials": "^8.2.7",
     "@storybook/addon-interactions": "^8.2.7",
@@ -102,7 +102,7 @@
     "@storybook/addon-onboarding": "^8.2.7",
     "@storybook/addon-themes": "^8.2.7",
     "@storybook/blocks": "^8.2.7",
-    "@storybook/nextjs": "^8.2.7",
+    "@storybook/nextjs": "^7.0.14",
     "@storybook/react": "^8.2.8",
     "@storybook/test": "^8.2.7",
     "autoprefixer": "10.4.19",
@@ -121,7 +121,7 @@
     "postcss-styled-syntax": "0.6.4",
     "prettier": "3.3.2",
     "storybook": "^8.2.7",
-    "storybook-anima": "^1.43.0",
+    "storybook-anima": "^1.12.0",
     "storybook-theme-css-vars": "^0.0.12",
     "style-loader": "^4.0.0",
     "stylelint": "16.6.1",
