--- a/package.json
+++ b/package.json
@@ -141,6 +141,7 @@
     "react": "18.3.1",
     "rimraf": "5.0.7",
     "react-dom": "18.3.1",
+    "next": "14.2.3",
     "@storybook/components": "6.5.16",
     "@storybook/theming": "^6.3.6"
   }
